@@ -3397,14 +3397,9 @@
                 <property name="Territory Turn Limit" value="true" editable="true">
                         <boolean/>
                 </property>
-
-                <property name="Heavy Bombers Pick best of X Dice" value="true" editable="true">
-                        <boolean/>
-                </property>
                 
-
                 <!-- Bids -->
-		<property name="Germans bid" value="0" editable="true">
+				<property name="Germans bid" value="0" editable="true">
                         <number min="0" max="1000"/>
                 </property>
                 
