@@ -54,7 +54,6 @@ public interface Constants
   public static final String SUBMERSIBLE_SUBS = "Submersible Subs";
   public static final String TWO_HIT = "isTwoHit";
   public static final String USE_DESTROYERS_AND_ARTILLERY = "Use Destroyers and Artillery";
-  public static final String HEAVY_BOMBER_DOWNGRADE = "Heavy Bombers Pick best of X Dice";
   public static final String LOW_LUCK = "Low Luck";
   public static final String IPC_CAP = "Territory Turn Limit";
   
