@@ -192,18 +192,6 @@ public class StrategicBombingRaidBattle implements Battle
         String annotation = attacker.getName() + " rolling to allocate ipc cost in strategic bombing raid against " + m_defender.getName() + " in "
                 + location.getName();
         int[] dice = bridge.getRandom(Constants.MAX_DICE, rollCount, annotation);
-        int[] newDice;
-        if (TechTracker.hasHeavyBomber(attacker) && m_data.getProperties().get(Constants.HEAVY_BOMBER_DOWNGRADE, false))
-        {
-            newDice = new int[dice.length / 2];
-            for (int i = 0; i < dice.length; i += 2)
-            {
-                newDice[i / 2] = Math.max(dice[i], dice[i + 1]);
-                bridge.getHistoryWriter().addChildToEvent(
-                        "Bomber rolled " + (dice[i] + 1) + " and " + (dice[i + 1] + 1) + " and picked " + (newDice[i / 2] + 1));
-            }
-            dice = newDice;
-        }
 
         int cost = 0;
         boolean fourthEdition = m_data.getProperties().get(Constants.FOURTH_EDITION, false);
@@ -215,14 +203,9 @@ public class StrategicBombingRaidBattle implements Battle
         while (iter.hasNext())
         {
             int rolls;
-            if (TechTracker.hasHeavyBomber(attacker) && m_data.getProperties().get(Constants.HEAVY_BOMBER_DOWNGRADE, false))
-            {
-                rolls = 1;
-                iter.next();
-            } else
-            {
-                rolls = BattleCalculator.getRolls((Unit) iter.next(), attacker, false);
-            }
+            
+            rolls = BattleCalculator.getRolls((Unit) iter.next(), attacker, false);
+            
             int costThisUnit = 0;
             for (int i = 0; i < rolls; i++)
             {
